# capo-lite

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  LICENSE  README.md  version.cmake
.github/workflows/: ci.yml  deploy_docs.yml
capo/: CMakeLists.txt  header_list.cmake
capo/include/capo/: capo.hpp  channels.hpp  clip.hpp  compression.hpp  device.hpp  duration.hpp  error_handler.hpp  frame_index.hpp  orientation.hpp  pcm.hpp  sample.hpp  sound_source.hpp  state.hpp  stream.hpp  stream_source.hpp  vec3.hpp
capo/src/: CMakeLists.txt  build_version.hpp.in  device.cpp  duration.cpp  pcm.cpp  sound_source.cpp  stream.cpp  stream_source.cpp
capo/src/detail/: CMakeLists.txt  error_handler.cpp  error_handler.hpp  interfaces.hpp  unique.hpp
capo/src/openal/: CMakeLists.txt  device.cpp  device.hpp
examples/: CMakeLists.txt  interactive.cpp  music.cpp  sound.cpp
examples/player/: CMakeLists.txt
examples/player/src/: CMakeLists.txt
examples/player/src/player/: app.cpp  app.hpp  controller.hpp  input.cpp  input.hpp  main.cpp  model.hpp  view.cpp  view.hpp
examples/src/: basic.cpp  decode.cpp  stream.cpp
ext/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/capo/: buffer.hpp  decode.hpp  encoding.hpp  engine.hpp  format.hpp  pcm.hpp  polymorphic.hpp  source.hpp  stream.hpp  stream_pipe.hpp  vec3.hpp
lib/src/: build_version.hpp.in  capo.cpp  version.hpp.in
