file(ARCHIVE_EXTRACT INPUT "${CMAKE_CURRENT_SOURCE_DIR}/src.zip" DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}")

message(STATUS "[miniaudio]")
set(MINIAUDIO_NO_EXTRA_NODES ON)
set(MINIAUDIO_NO_LIBVORBIS ON)
set(MINIAUDIO_NO_LIBOPUS ON)
set(MINIAUDIO_NO_CUSTOM ON)
set(MINIAUDIO_NO_ENCODING ON)
set(MINIAUDIO_NO_GENERATION ON)

set(MINIAUDIO_DEBUG_OUTPUT ${CAPO_MA_DEBUG_OUTPUT})

add_subdirectory(src/miniaudio)
add_library(miniaudio::miniaudio ALIAS miniaudio)
